@@ -1,3 +1,10 @@
+2009-01-07  Pedro Alves  <pedro@codesourcery.com>
+
+	* gdb.texinfo (Error in Breakpoints): Delete mention of "The same
+	program may be running in another process" errors.
+	* gdbint.texinfo (Native Conditionals): Delete
+	ONE_PROCESS_WRITETEXT description.
+
 2009-01-07  Joel Brobecker  <brobecker@adacore.com>
 
 	* gdbint.texinfo (Start of New Year Procedure): Add the "coding"
