@@ -1,3 +1,14 @@
+2009-01-07  Pedro Alves  <pedro@codesourcery.com>
+
+	Delete ONE_PROCESS_WRITETEXT leftovers.
+
+	* breakpoint.c (insert_bp_location): Delete process_warning
+	argument.  Adjust.
+	(insert_breakpoint_locations): Adjust.
+	(reattach_breakpoints): Adjust.
+	* infrun.c (normal_stop): Drop "It might be running in another
+	process" notice.
+
 2009-01-07  Stan Shebs  <stan@codesourcery.com>
 
 	* config/pa/linux.mh (XDEPFILES): Remove.
